# dreamerv3

./: .gitignore  pyproject.toml  pyproject_.toml  requirements.txt
dreamerv3/: configs.yaml
