

[tool.setuptools]
packages = ["dreamerv3"] # 只包含主包

[project]
name = "dreamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
  "ale_py==0.9.0",
  "autorom[accept-rom-license]==0.6.1",
  "av",
  "chex",
  "colored_traceback",
  "einops",
  "elements>=3.19.1",
  "google-resumable-media>=2.7.2",
  "granular>=0.20.3",
  "ipdb",
  "jax[tpu]==0.4.33",
  "jaxtyping",
  "ninjax>=3.5.1",
  "numpy<2",                            # DMLab: <2, MineRLv1.0: <1.24
  "optax",
  "portal>=3.5.0",
  "scope>=0.4.4",
  "tqdm",
  "crafter",
  "wandb[media]<0.19",
  "moviepy==1.0.3", #moviepy v2.2.1似乎能和wandb[media] v0.18.7兼容
  "imageio<=2.5", #更新的版本限制单通道图像写入导致 ValueError("Can't write images with one color channel.")
  "tensorflow",# jax.profiler需要用到
  "tensorboard",
  "tensorboard-plugin-profile",
]
